<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteTwo"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorWhite"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <com.happi.android.customviews.TypefacedTextViewRegular
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=""
            android:textColor="@color/greyishBrownTwo"
            android:textSize="@dimen/text_regular_medium1" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dimen_30dp"
        android:layout_marginRight="@dimen/dimen_30dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dimen_180dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dimen_35dp"
            android:src="@drawable/ic_title_side" />

        <com.happi.android.customviews.TypefacedTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_7dp"
            android:text="@string/forgotten_your_password"
            android:textColor="@color/greyishBrown"
            android:textSize="@dimen/text_regular_medium2" />

        <com.happi.android.customviews.TypefacedTextViewRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_35dp"
            android:text="@string/please_enter_your_email_address"
            android:textColor="@color/coolGrey"
            android:textSize="@dimen/text_regular_medium1"
            android:gravity="center"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:layout_marginLeft="@dimen/dimen_30dp"
            android:layout_marginRight="@dimen/dimen_30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/coolGrey"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/dark_black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginLeft="@dimen/dimen_30dp"
            android:layout_marginRight="@dimen/dimen_30dp"
            android:layout_marginTop="-15dp"
            android:background="@color/whiteThree" />

        <Button
            android:id="@+id/bt_submit"
            android:layout_width="@dimen/dimen_300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:padding="@dimen/dimen_20dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_regular_medium3" />

        <com.happi.android.customviews.TypefacedTextViewRegular
            android:id="@+id/tv_return_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:padding="@dimen/dimen_5dp"
            android:background="?selectableItemBackground"
            android:text="@string/return_to_login"
            android:textColor="@color/coolGrey"
            android:textSize="@dimen/text_regular_medium1" />

    </LinearLayout>
</LinearLayout>
