<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_otp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical|center_horizontal">
    <LinearLayout
        android:id="@+id/ll_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:padding="@dimen/dimen_20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_enter_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:padding="@dimen/dimen_2dp"
            android:text="@string/enter_otp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_large1"
            android:textStyle="bold" />
      <!--  <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_2dp"
            android:layout_marginBottom="@dimen/dimen_3dp"
            android:background="@color/whiteThree" />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:background="@drawable/bg_outline">


        <EditText
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint=""
            android:background="@android:color/transparent"
            android:inputType="number"
            android:maxLength="6"
            android:padding="@dimen/dimen_3dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_marginBottom="@dimen/dimen_5dp"/>
        </LinearLayout>
      <!--  <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_2dp"
            android:layout_marginBottom="@dimen/dimen_3dp"
            android:background="@color/whiteThree" />-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="@string/ok"
                android:textSize="@dimen/text_regular_medium3"
                android:layout_alignParentRight="true"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/btn_skip"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/skip"
                android:layout_alignParentLeft="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_regular_medium3" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>