<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_otp_verification_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:visibility="gone">


    <LinearLayout
        android:id="@+id/ll_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_back_to_page"
                android:layout_width="@dimen/dimen_48dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/dimen_3dp"
                android:src="@drawable/ic_back"
                android:tint="@color/colorPrimaryDark"
                android:contentDescription="@string/image_label"/>

            <LinearLayout
                android:id="@+id/rl_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal|center_vertical">

                <ImageView
                    android:id="@+id/iv_logo_text"
                    android:layout_width="@dimen/dimen_150dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_title_side"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image_label"/>

            </LinearLayout>

        </FrameLayout>




    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/ll_toolbar"
        android:weightSum="4">
        <LinearLayout
            android:id="@+id/ll_cont1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_weight="2.5">


            <TextView
                android:id="@+id/tv_verf_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:padding="16dp"
                android:text="@string/verf_code"
                android:textColor="@color/dark_black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_verfication_code_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:fontFamily="sans-serif-black"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/dark_black"/>

            <com.happi.android.otpView.OtpView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_60dp"
                android:inputType="number"
                app:cursorColor="@color/white"
                android:background="@color/white"
                android:itemBackground="@drawable/bg_otp_item"
                app:hideLineWhenFilled="true"
                app:itemCount="6"
                app:itemSpacing="@dimen/dimen_6dp"
                app:state_filled="true"
                app:viewType="rectangle"
                android:textColor="@color/dark_black"
                android:imeOptions="actionDone"
                android:windowSoftInputMode="adjustPan"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_timer_cont"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:visibility="gone">
            <LinearLayout
                android:id="@+id/rl_timer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <com.happi.android.customviews.TypefacedTextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/resend_otp"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/tv_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="  00:00"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:visibility="invisible"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:gravity="top|center_horizontal"
            android:layout_height="0dp"
            android:paddingTop="@dimen/dimen_10dp">

            <LinearLayout
                android:layout_marginEnd="30dp"
                android:id="@+id/ll_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_outline_grey"
                android:visibility="gone">
                <TextView
                    android:id="@+id/tv_resend_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/dimen_15dp"
                    android:layout_marginRight="@dimen/dimen_15dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:layout_marginBottom="@dimen/dimen_10dp"
                    android:text="  Resend  " />
            </LinearLayout>
            <LinearLayout
                android:layout_width="@dimen/dimen_130dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_outline"

                android:gravity="center">
                <TextView
                    android:id="@+id/tv_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="@dimen/dimen_15dp"
                    android:layout_marginRight="@dimen/dimen_15dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:layout_marginBottom="@dimen/dimen_10dp"
                    android:text="  Done  " />
            </LinearLayout>



        </LinearLayout>

    </LinearLayout>




</RelativeLayout>